Closed
Bug 200038
Opened 23 years ago
Closed 23 years ago
ASSERTION: bad class for Document object
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: hjtoi-bugzilla, Unassigned)
Details
Attachments
(1 file)
|
714 bytes,
patch
|
hjtoi-bugzilla
:
review+
peterv
:
superreview+
|
Details | Diff | Splinter Review |
I was using Venkman, and when using the twisty to look at the properties of a
document (XMLDocument) object I get this assertion:
###!!! ASSERTION: Bad class for Document object!: 'clazz && clazz->flags & JSCLA
SS_HAS_PRIVATE && clazz->flags & JSCLASS_PRIVATE_IS_NSISUPPORTS', file c:/builds
/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 4825
This is somewhat worrying since the assertion happens in function
documentNeedsSecurityCheck() which we really should get right...!
I got this by placing a breakpoint in nsPolicyViewer.js line 390, then opening
P3P page info tab and clicking Summary button on www.att.net. I am wondering if
this might be regression from the XULDocument refactoring (I have not checked if
this happens in build sprior to that).
Comment 1•23 years ago
|
||
Nothing wrong with the real code here, just a bug in the DEBUG code.
Updated•23 years ago
|
Attachment #119141 -
Flags: superreview?(peterv)
Attachment #119141 -
Flags: review?(heikki)
Updated•23 years ago
|
Attachment #119141 -
Flags: superreview?(peterv) → superreview+
| Reporter | ||
Updated•23 years ago
|
Attachment #119141 -
Flags: review?(heikki) → review+
You need to log in
before you can comment on or make changes to this bug.
Description
•