Fixing bug 200038. Fixing bogus assertion triggerd in venkman. r=heikki@netscape.com, sr=peterv@netscape.com